k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager-api
  namespace: task-manager
  labels:
    app: task-manager-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-manager-api
  template:
    metadata:
      labels:
        app: task-manager-api
    spec:
      containers:
        - name: api
          # image: task-manager-api-task3
          image: ghcr.io/jiangqiwen/task-manager-api-task5:1.0.7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
